# dibs

./: Cargo.toml  README.md.in  pnpm-lock.yaml  pnpm-workspace.yaml  release-plz.toml  tsconfig.json
.github/workflows/: ci.yml  release.yml  website.yml
crates/dibs-qgen/src/rustgen/: mod.rs
docs/: META-TABLES.md  MIGRATIONS-VISION.md
docs/content/guide/: admin-ui.md  first-table.md
docs/content/internals/: meta-tables.md
