[workspace]
members = [
  "crates/*",
  "examples/my-app-workspace/my-app",
  "examples/my-app-workspace/my-app-db",
  "examples/my-app-workspace/my-app-queries",
]
exclude = ["examples/admin-ui"]
resolver = "3"

[workspace.metadata.cargo-shear]
ignored = ["dibs-runtime"]

[workspace.dependencies]
# Internal crates
dibs = { path = "crates/dibs" }
dibs-config = { path = "crates/dibs-config" }
dibs-macros = { path = "crates/dibs-macros" }
dibs-proto = { path = "crates/dibs-proto" }
dibs-qgen = { path = "crates/dibs-qgen" }
dibs-query-schema = { path = "crates/dibs-query-schema" }
dibs-db-schema = { path = "crates/dibs-db-schema" }
dibs-jsonb = { path = "crates/dibs-jsonb" }
dibs-runtime = { path = "crates/dibs-runtime" }
dockside = { path = "crates/dockside" }

# facet ecosystem
facet = "0.46"
figue = "2"
facet-core = "0.46"
facet-value = "0.46"
facet-json = "0.46"
facet-reflect = "0.46"
facet-testhelpers = "0.46"
facet-tokio-postgres = { path = "crates/facet-tokio-postgres" }

strid = "10"

# styx ecosystem
facet-styx = "3"
styx-embed = "3"
styx-tree = { version = "3", features = ["facet"] }
styx-lsp-ext = "3"
styx-lsp = "3"

# vox ecosystem
vox = "0.8"
vox-codegen = "0.8"
vox-core = "0.8"
vox-stream = "0.8"
vox-websocket = "0.8"

# async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-postgres = { version = "0.7" }
tokio-tungstenite = "0.29"
deadpool-postgres = "0.14"

# serialization & data
bytes = "1"
chrono = "0.4"
jiff = "0.2"
postgres-types = "0.2"
rust_decimal = { version = "1", default-features = false, features = [] }
time = "0.3"
uuid = "1"

# error handling
thiserror = "2"

# CLI & terminal
crossterm = "0.29"
dotenvy = "0.15"
owo-colors = "4"
ratatui = "0.30"

# syntax highlighting
arborium = { version = "2", features = ["lang-rust"] }
arborium-highlight = "2"
arborium-theme = "2"
ariadne = "0.6"

# proc macros
proc-macro2 = "1"
quote = "1"
unsynn = { version = "0.3", features = ["proc_macro2"] }

# codegen
codegen = "0.3"

# misc
camino = "1"
indexmap = "2"
inventory = "0.3"
blake3 = "1"

# dev/test dependencies
insta = "1"
proptest = "1"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[patch.crates-io]
facet-styx = { git = "https://github.com/bearcove/styx", rev = "6e5eafaef9906ff5a9941e1153c1b3cba543bec9" }
styx-embed = { git = "https://github.com/bearcove/styx", rev = "6e5eafaef9906ff5a9941e1153c1b3cba543bec9" }
styx-tree = { git = "https://github.com/bearcove/styx", rev = "6e5eafaef9906ff5a9941e1153c1b3cba543bec9" }
styx-parse = { git = "https://github.com/bearcove/styx", rev = "6e5eafaef9906ff5a9941e1153c1b3cba543bec9" }
styx-cst = { git = "https://github.com/bearcove/styx", rev = "6e5eafaef9906ff5a9941e1153c1b3cba543bec9" }
styx-format = { git = "https://github.com/bearcove/styx", rev = "6e5eafaef9906ff5a9941e1153c1b3cba543bec9" }
styx-lsp-ext = { git = "https://github.com/bearcove/styx", rev = "6e5eafaef9906ff5a9941e1153c1b3cba543bec9" }
styx-lsp = { git = "https://github.com/bearcove/styx", rev = "6e5eafaef9906ff5a9941e1153c1b3cba543bec9" }
styx-lsp-test-schema = { git = "https://github.com/bearcove/styx", rev = "6e5eafaef9906ff5a9941e1153c1b3cba543bec9" }

# facet = { path = "../facet/facet" }

# # Note: Uncomment to develop facet
# [patch."https://github.com/facet-rs/facet"]
# facet = { path = "../facet/facet" }
# facet-core = { path = "../facet/facet-core" }
# facet-dessert = { path = "../facet/facet-dessert" }
# facet-error = { path = "../facet/facet-error" }
# facet-format = { path = "../facet/facet-format" }
# facet-path = { path = "../facet/facet-path" }
# facet-postcard = { path = "../facet/facet-postcard" }
# facet-pretty = { path = "../facet/facet-pretty" }
# facet-reflect = { path = "../facet/facet-reflect" }
# facet-solver = { path = "../facet/facet-solver" }
# facet-testhelpers = { path = "../facet/facet-testhelpers" }
# facet-toml = { path = "../facet/facet-toml" }
# facet-value = { path = "../facet/facet-value" }

# [patch."https://github.com/bearcove/roam"]
# roam = { path = "../roam/rust/roam" }
# roam-codegen = { path = "../roam/rust/roam-codegen" }
# roam-frame = { path = "../roam/rust/roam-frame" }
# roam-hash = { path = "../roam/rust/roam-hash" }
# roam-service-macros = { path = "../roam/rust/roam-macros" }
# roam-macros-parse = { path = "../roam/rust/roam-macros-parse" }
# roam-schema = { path = "../roam/rust/roam-schema" }
# roam-session = { path = "../roam/rust/roam-session" }
# roam-stream = { path = "../roam/rust/roam-stream" }
# roam-task-local = { path = "../roam/rust/roam-task-local" }
# roam-websocket = { path = "../roam/rust/roam-websocket" }
# roam-wire = { path = "../roam/rust/roam-wire" }
